feat: finish large stickers and formal group calls
